// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBasicTable cellProps renders cells with custom props from a callback 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customRowClass"
            data-test-subj="cell-1-name"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customRowClass"
            data-test-subj="cell-2-name"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customRowClass"
            data-test-subj="cell-3-name"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable cellProps renders rows with custom props from an object 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customClass"
            data-test-subj="cell"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customClass"
            data-test-subj="cell"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            className="customClass"
            data-test-subj="cell"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            onClick={[Function]}
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty is rendered 1`] = `
<div
  aria-label="aria-label"
  className="euiBasicTable testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 0,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            mobileOptions={
              Object {
                "show": true,
              }
            }
            textOnly={true}
          >
            No items found
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty renders a node as a custom message 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 0,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            mobileOptions={
              Object {
                "show": true,
              }
            }
            textOnly={true}
          >
            <p>
              no items, click 
              <a
                href={true}
              >
                here
              </a>
               to make some
            </p>
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable empty renders a string as a custom message 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 0,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            mobileOptions={
              Object {
                "show": true,
              }
            }
            textOnly={true}
          >
            where my items at?
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable footers do not render without a column footer definition 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_id_1"
          key="_data_h_id_1"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          ID
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_age_2"
          key="_data_h_age_2"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Age
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_1_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_1_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            20
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_2_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_2_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            21
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_3_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_3_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            22
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable footers render with pagination, selection, sorting, and footer 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_id_1"
          key="_data_h_id_1"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          ID
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_age_2"
          key="_data_h_age_2"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Age
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_1_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_1_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            20
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_2_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_2_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            21
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_id_3_1"
            mobileOptions={
              Object {
                "header": "ID",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="left"
            key="_data_column_age_3_2"
            mobileOptions={
              Object {
                "header": "Age",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            22
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
      <EuiTableFooter>
        <EuiTableFooterCell
          align="left"
          key="_selection_column_f"
        />
        <EuiTableFooterCell
          align="left"
          key="footer_name"
        >
          <strong>
            Name
          </strong>
        </EuiTableFooterCell>
        <EuiTableFooterCell
          align="left"
          key="footer_id"
        >
          ID
        </EuiTableFooterCell>
        <EuiTableFooterCell
          align="left"
          key="footer_age"
        >
          <strong>
            sum:
            63
            <br />
            total items:
            5
          </strong>
        </EuiTableFooterCell>
      </EuiTableFooter>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable itemIdToExpandedRowMap renders an expanded row 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          aria-owns="row_1_expansion"
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          id="row_1_expansion"
          isExpandedRow={true}
        >
          <EuiTableRowCell
            align="left"
            colSpan={1}
            mobileOptions={
              Object {
                "show": true,
              }
            }
            textOnly={true}
          >
            <div>
              Expanded row
            </div>
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable rowProps renders rows with custom props from a callback 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-1"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_0_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-2"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_1_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customRowClass"
            data-test-subj="row-3"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_2_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable rowProps renders rows with custom props from an object 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_0_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name1
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_1_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name2
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
        <EuiKeyboardAccessible>
          <EuiTableRow
            className="customClass"
            data-test-subj="row"
            isSelected={false}
            onClick={[Function]}
          >
            <EuiTableRowCell
              align="left"
              key="_data_column_name_2_0"
              mobileOptions={
                Object {
                  "header": "Name",
                  "render": undefined,
                }
              }
              textOnly={true}
            >
              name3
            </EuiTableRowCell>
          </EuiTableRow>
        </EuiKeyboardAccessible>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination - 2nd page 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 2,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_4_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 1,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination and error 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow>
          <EuiTableRowCell
            align="center"
            colSpan={1}
            isMobileFullWidth={true}
            mobileOptions={
              Object {
                "show": true,
              }
            }
            textOnly={true}
          >
            <EuiIcon
              color="danger"
              type="minusInCircle"
            />
             
            no can do
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with pagination and selection 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, hiding the per page options 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": true,
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection and sorting 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and a single record action 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_1_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "1",
                  "name": "name1",
                }
              }
              itemId="1"
            />
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_2_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "2",
                  "name": "name2",
                }
              }
              itemId="2"
            />
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_3_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "3",
                  "name": "name3",
                }
              }
              itemId="3"
            />
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column dataType 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_count_0",
                  "name": "Count",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          data-test-subj="tableHeaderCell_count_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_1_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_2_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_3_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and column renderer 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            NAME1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            NAME2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            NAME3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting and multiple record actions 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
        <EuiTableHeaderCell
          align="right"
          key="_actions_h_1"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Actions
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_1_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                  Object {
                    "description": "delete",
                    "name": "Delete",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "1",
                  "name": "name1",
                }
              }
              itemId="1"
            />
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_2_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                  Object {
                    "description": "delete",
                    "name": "Delete",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "2",
                  "name": "name2",
                }
              }
              itemId="2"
            />
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          hasActions={true}
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="left"
            key="_data_column_name_3_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
          <EuiTableRowCell
            align="right"
            hasActions={true}
            key="record_actions_3_1"
            mobileOptions={
              Object {
                "show": true,
              }
            }
            showOnHover={true}
            textOnly={false}
          >
            <ExpandedItemActions
              actionEnabled={[Function]}
              actions={
                Array [
                  Object {
                    "description": "edit",
                    "name": "Edit",
                    "onClick": [Function],
                    "type": "button",
                  },
                  Object {
                    "description": "delete",
                    "name": "Delete",
                    "onClick": [Function],
                    "type": "button",
                  },
                ]
              }
              item={
                Object {
                  "id": "3",
                  "name": "name3",
                }
              }
              itemId="3"
            />
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with pagination, selection, sorting, column renderer and column dataType 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_count_0",
                  "name": "Count",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCellCheckbox
          key="_selection_column_h"
          width="24px"
        >
          <EuiI18n
            default="Select all rows"
            token="euiBasicTable.selectAllRows"
          >
            <Component />
          </EuiI18n>
        </EuiTableHeaderCellCheckbox>
        <EuiTableHeaderCell
          align="right"
          data-test-subj="tableHeaderCell_count_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_count_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Count
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_1"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_1_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            x
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_2"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_2_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            xx
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelectable={true}
          isSelected={false}
        >
          <EuiTableRowCellCheckbox
            key="_selection_column_3"
          >
            <EuiI18n
              default="Select this row"
              token="euiBasicTable.selectThisRow"
            >
              <Component />
            </EuiI18n>
          </EuiTableRowCellCheckbox>
          <EuiTableRowCell
            align="right"
            key="_data_column_count_3_0"
            mobileOptions={
              Object {
                "header": "Count",
                "render": undefined,
              }
            }
            textOnly={false}
          >
            xxx
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
  <PaginationBar
    onPageChange={[Function]}
    onPageSizeChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 3,
        "totalItemCount": 5,
      }
    }
  />
</div>
`;

exports[`EuiBasicTable with sortable columns and sorting disabled 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        />
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;

exports[`EuiBasicTable with sorting 1`] = `
<div
  className="euiBasicTable"
>
  <div>
    <EuiTableHeaderMobile>
      <EuiFlexGroup
        alignItems="baseline"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiTableSortMobile
            items={
              Array [
                Object {
                  "isSortAscending": true,
                  "isSorted": true,
                  "key": "_data_s_name_0",
                  "name": "Name",
                  "onSort": [Function],
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiTableHeaderMobile>
    <EuiTable
      responsive={true}
    >
      <EuiScreenReaderOnly>
        <caption
          aria-live="polite"
          aria-relevant="text"
          role="status"
        >
          <EuiDelayRender
            delay={500}
          >
            <EuiI18n
              default="Below is a table of {itemCount} items."
              token="euiBasicTable.tableDescription"
              values={
                Object {
                  "itemCount": 3,
                }
              }
            />
          </EuiDelayRender>
        </caption>
      </EuiScreenReaderOnly>
      <EuiTableHeader>
        <EuiTableHeaderCell
          align="left"
          data-test-subj="tableHeaderCell_name_0"
          isSortAscending={true}
          isSorted={true}
          key="_data_h_name_0"
          mobileOptions={
            Object {
              "show": true,
            }
          }
          onSort={[Function]}
          scope="col"
        >
          Name
        </EuiTableHeaderCell>
      </EuiTableHeader>
      <EuiTableBody>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_0_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name1
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_1_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name2
          </EuiTableRowCell>
        </EuiTableRow>
        <EuiTableRow
          isSelected={false}
        >
          <EuiTableRowCell
            align="left"
            key="_data_column_name_2_0"
            mobileOptions={
              Object {
                "header": "Name",
                "render": undefined,
              }
            }
            textOnly={true}
          >
            name3
          </EuiTableRowCell>
        </EuiTableRow>
      </EuiTableBody>
    </EuiTable>
  </div>
</div>
`;
